# project_api

./: .gitignore  app.py  models.py  pyproject.toml  requirements.txt  schemas.py  views.py
