[project]
name = "project-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker",
    "click",
    "Flask",
    "Flask-SQLAlchemy",
    "greenlet",
    "itsdangerous",
    "Jinja2",
    "MarkupSafe",
    "marshmallow",
    "marshmallow-sqlalchemy",
    "PyMySQL",
    "SQLAlchemy",
    "typing_extensions",
    "Werkzeug",
]
